--- a/styles.css
+++ b/styles.css
@@ -159,7 +159,8 @@ body{
 }
 
 
-.filmstrip{ background:#fff; }
+.filmstrip{ background:#fff;
+  padding-bottom: 2rem;}
 .strip{
   display:flex; gap:0; padding:0;
   overflow-x:auto; justify-content:center;
